gcc/testsuite/g++.dg/diagnostic/functional-cast-to-array-type-1.C
typedef int A [1];
A a = A(1);  // { dg-error "7:functional cast to array type" }
